--- a/MoviesApp/Views/Artists/Create.cshtml
+++ b/MoviesApp/Views/Artists/Create.cshtml
@@ -1,3 +1,4 @@
+@using MoviesApp.ViewModels
 @model MoviesApp.ViewModels.InputArtistsViewModel
 
 @{
@@ -7,28 +8,56 @@
 <h1>Create</h1>
 
 <h4>Artist</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Firstname" class="control-label"></label>
-                <input asp-for="Firstname" class="form-control" />
+                <input asp-for="Firstname" class="form-control"/>
                 <span asp-validation-for="Firstname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                            <label asp-for="Lastname" class="control-label"></label>
-                            <input asp-for="Lastname" class="form-control" />
-                            <span asp-validation-for="Lastname" class="text-danger"></span>
-                        </div>
+                <label asp-for="Lastname" class="control-label"></label>
+                <input asp-for="Lastname" class="form-control"/>
+                <span asp-validation-for="Lastname" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="BirthdayDate" class="control-label"></label>
-                <input asp-for="BirthdayDate" asp-format="{0:dd.MM.yyyy}" class="form-control" />
+                <input asp-for="BirthdayDate" asp-format="{0:dd.MM.yyyy}" class="form-control"/>
                 <span asp-validation-for="BirthdayDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label class="control-label">@Html.DisplayNameFor(model => model.ArtistsMovies)</label>
+                <div class="col-md-offset-1">
+                    <table>
+                        <tr>
+                        @{
+                            int cnt = 0;
+                            List<OptionsArtists> checkboxes = ViewBag.MovieOptions;
+                            foreach (var checkbox in checkboxes)
+                            {
+                                if (cnt++ % 1 == 0)
+                                {
+                                    @:</tr><tr>
+                                }
+                                @:<td>
+                                <input type="checkbox"
+                                       name="selOptions"
+                                       value="@checkbox.Id"
+                                       @(Html.Raw(checkbox.Assigned ? "checked=\"checked\"" : ""))/>
+                                @checkbox.Name
+                                @:&nbsp;&nbsp;
+                                @:</td>
+                            }
+                            @:</tr>
+                        }
+                    </table>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -39,5 +68,5 @@
 </div>
 
 @section Scripts {
-    @{Html.RenderPartial("_ValidationScriptsPartial");}
+    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
 }
