--- a/MoviesApp/Views/Movies/Details.cshtml
+++ b/MoviesApp/Views/Movies/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-           <label asp-for="Title"></label>
+            <label asp-for="Title"></label>
         </dt>
         <dd class = "col-sm-10">
             @Model.Title
@@ -36,6 +36,31 @@
         </dd>
     </dl>
 </div>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>BirthdayDate</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model.ArtistsMovies)
+    {
+        <tr>
+            <td>
+                @item.Artist.Firstname
+            </td>
+            <td>
+                @item.Artist.Lastname
+            </td>
+            <td>
+                @item.Artist.BirthdayDate.ToString("dd.MM.yyyy")
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
