--- a/MoviesApp/Views/Artists/Delete.cshtml
+++ b/MoviesApp/Views/Artists/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Movie</h4>
+    <h4>Artist</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,18 +17,17 @@
         <dd class = "col-sm-10">
             @Model.Firstname
         </dd>
-        
-        <dt class = "col-sm-2">
-           <label asp-for="Lastname"></label>
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.Lastname
-        </dd>
         <dt class = "col-sm-2">
             <label asp-for="BirthdayDate"></label>
         </dt>
         <dd class = "col-sm-10">
             @Model.BirthdayDate.ToString("dd.MM.yyyy")
+        </dd>
+        <dt class = "col-sm-2">
+            <label asp-for="Lastname"></label>
+        </dt>
+        <dd class = "col-sm-10">
+            @Model.Lastname
         </dd>
     </dl>
     
